2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Remove libnautilus-adapter subdir
	
	* components/Makefile.am:
	Don't build throbber atm
	
	* src/nautilus-navigation-action.c:
	Use GtkMenuToolButton instead of NautilusArrowToolbutton
	
	* src/Makefile.am:
	* src/nautilus-arrow-toolbutton.[ch]:
	Remove.

2004-11-16  Anders Carlsson  <andersca@gnome.org>

	* libnautilus-private/nautilus-window-info.c:
	(nautilus_window_info_get_ui_manager):
	It's NULL now, not CORBA_OBJECT_NIL.
	
2004-11-16  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-view.h:
	remove bonoboui inclide
	
	* src/nautilus-navigation-action.[ch]:
	Add navigation GtkAction, based on epi code
	
	* src/nautilus-window-menus.c:
	* src/nautilus-window-toolbars.c:
	Correctly handle toolbar icons for extensions

2004-11-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Remove bonoboui dependencies
	
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-bonobo-extensions.[ch]:
	* libnautilus-private/nautilus-bonobo-ui.h:
	Remove unneeded files
	
	* libnautilus-private/nautilus-clipboard.c:
	Comment out for now.
	
	* libnautilus-private/nautilus-directory-metafile-monitor.c:
	* libnautilus-private/nautilus-metafile.c:
	* src/nautilus-application.c: 
	* src/nautilus-history-sidebar.c:
	* src/nautilus-information-panel.c:
	* src/nautilus-main.c: (main):
	* src/nautilus-notes-viewer.c:
	* src/nautilus-sidebar-title.c:
	* src/file-manager/fm-properties-window.c:
	Remove bonobo includes
	
	* libnautilus-private/nautilus-file-utilities.[ch]:
	(nautilus_get_ui_directory), (nautilus_ui_file):
	Util functions for ui files.
	
	* libnautilus-private/nautilus-view.[ch]:
	* libnautilus-private/nautilus-window-info.[ch]:
	Remove bonoboui methods
	
	* src/Makefile.am:
	Add new files, remove some old ones
	Move ui files to datadir/nautilus/ui
	
	* src/nautilus-actions.h:
	New file with action names
	
	* src/nautilus-arrow-toolbutton.[ch]: